--- a/index.html
+++ b/index.html
@@ -45,12 +45,15 @@
 
 
     .hero {
-  height: 350px;
-  padding: 3rem 1rem;
+  height: 260px;
+  padding: 2rem 1rem;
   display: flex;
   align-items: center;
   justify-content: center;
   text-align: center;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
 
       position: relative;
       background-image: url('assets/images/bg-greece.jpg');
