--- a/index.html
+++ b/index.html
@@ -45,15 +45,7 @@
 
 
     .hero {
-  height: 180px;
-  padding: 1.5rem 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
+  height: 100vh;
 
       position: relative;
       background-image: url('assets/images/bg-greece.jpg');
