--- a/index.html
+++ b/index.html
@@ -45,26 +45,14 @@
 
 
     .hero {
-  height: 180px;
-  padding: 1.5rem 1rem;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  text-align: center;
+  width: 100%;
+  aspect-ratio: 16 / 4;
   background-image: url('assets/images/bg-greece.jpg');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
-  background-attachment: scroll;
-
-      position: relative;
-      background-image: url('assets/images/bg-greece.jpg');
-      background-size: cover;
-      background-position: center;
-      color: white;
-      padding: 5rem 2rem;
-      text-align: center;
-    }
+  background-color: white;
+}
     
     .hero h1, .hero p {
       position: relative;
@@ -126,10 +114,34 @@
   
 @media (max-width: 600px) {
   .hero {
-    height: 140px;
-    padding: 1rem;
-  }
+  width: 100%;
+  aspect-ratio: 16 / 4;
+  background-image: url('assets/images/bg-greece.jpg');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: white;
 }
+}
+
+.floating-letters {
+  position: relative;
+  width: 100%;
+  height: 0;
+}
+.letter {
+  position: absolute;
+  font-size: 2.2rem;
+  font-weight: bold;
+  color: #003366;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  animation: float 6s ease-in-out infinite alternate;
+}
+@keyframes float {
+  0%   { transform: translateY(0px); opacity: 0.8; }
+  100% { transform: translateY(-10px); opacity: 1; }
+}
+
 </style>
 <style>
   .menu-toggle {
@@ -170,10 +182,34 @@
 
 @media (max-width: 600px) {
   .hero {
-    height: 140px;
-    padding: 1rem;
-  }
+  width: 100%;
+  aspect-ratio: 16 / 4;
+  background-image: url('assets/images/bg-greece.jpg');
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-color: white;
 }
+}
+
+.floating-letters {
+  position: relative;
+  width: 100%;
+  height: 0;
+}
+.letter {
+  position: absolute;
+  font-size: 2.2rem;
+  font-weight: bold;
+  color: #003366;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  animation: float 6s ease-in-out infinite alternate;
+}
+@keyframes float {
+  0%   { transform: translateY(0px); opacity: 0.8; }
+  100% { transform: translateY(-10px); opacity: 1; }
+}
+
 </style>
 <script>
   document.addEventListener("DOMContentLoaded", function() {
@@ -211,6 +247,21 @@
 </nav>
 
   <div class="hero"></div>
+
+<div class="floating-letters">
+  <span class="letter" style="top: 10%; left: 2%;">Α</span>
+  <span class="letter" style="top: 30%; left: 5%;">Β</span>
+  <span class="letter" style="top: 60%; left: 3%;">Γ</span>
+  <span class="letter" style="top: 20%; right: 2%;">Δ</span>
+  <span class="letter" style="top: 50%; right: 3%;">Ε</span>
+  <span class="letter" style="bottom: 15%; left: 1%;">Ζ</span>
+  <span class="letter" style="bottom: 30%; right: 2%;">Η</span>
+  <span class="letter" style="top: 40%; left: 6%;">Θ</span>
+  <span class="letter" style="bottom: 10%; right: 4%;">Σ</span>
+  <span class="letter" style="top: 5%; right: 6%;">Ω</span>
+  <span class="letter" style="bottom: 5%; left: 5%;">Ψ</span>
+</div>
+
 
   <section id="about">
     <h2 class="section-title">За мен / Σχετικά με εμένα</h2>
