--- a/index.html
+++ b/index.html
@@ -45,13 +45,15 @@
 
 
     .hero {
-  width: 100%;
-  aspect-ratio: 16 / 4;
+  position: relative;
   background-image: url('assets/images/bg-greece.jpg');
   background-size: contain;
-  background-repeat: no-repeat;
   background-position: center;
+  background-repeat: no-repeat;
   background-color: white;
+  width: 100%;
+  aspect-ratio: 16 / 4;
+  overflow: hidden;
 }
     
     .hero h1, .hero p {
@@ -112,34 +114,19 @@
       color: white;
     }
   
-@media (max-width: 600px) {
-  .hero {
-  width: 100%;
-  aspect-ratio: 16 / 4;
-  background-image: url('assets/images/bg-greece.jpg');
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: white;
-}
-}
-
-.floating-letters {
-  position: relative;
-  width: 100%;
-  height: 0;
-}
-.letter {
+.hero-letter {
   position: absolute;
   font-size: 2.2rem;
   font-weight: bold;
-  color: #003366;
+  color: #002b5c;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  animation: float 6s ease-in-out infinite alternate;
+  animation: fade-float 4s ease-in-out infinite;
+  opacity: 0;
 }
-@keyframes float {
-  0%   { transform: translateY(0px); opacity: 0.8; }
-  100% { transform: translateY(-10px); opacity: 1; }
+@keyframes fade-float {
+  0%   { transform: translateY(0px); opacity: 0; }
+  50%  { transform: translateY(-5px); opacity: 1; }
+  100% { transform: translateY(-10px); opacity: 0; }
 }
 
 </style>
@@ -180,34 +167,19 @@
     }
   }
 
-@media (max-width: 600px) {
-  .hero {
-  width: 100%;
-  aspect-ratio: 16 / 4;
-  background-image: url('assets/images/bg-greece.jpg');
-  background-size: contain;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-color: white;
-}
-}
-
-.floating-letters {
-  position: relative;
-  width: 100%;
-  height: 0;
-}
-.letter {
+.hero-letter {
   position: absolute;
   font-size: 2.2rem;
   font-weight: bold;
-  color: #003366;
+  color: #002b5c;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  animation: float 6s ease-in-out infinite alternate;
+  animation: fade-float 4s ease-in-out infinite;
+  opacity: 0;
 }
-@keyframes float {
-  0%   { transform: translateY(0px); opacity: 0.8; }
-  100% { transform: translateY(-10px); opacity: 1; }
+@keyframes fade-float {
+  0%   { transform: translateY(0px); opacity: 0; }
+  50%  { transform: translateY(-5px); opacity: 1; }
+  100% { transform: translateY(-10px); opacity: 0; }
 }
 
 </style>
@@ -221,7 +193,6 @@
   });
 </script>
 
-  <link rel="preload" href="assets/images/bg-greece.jpg" as="image" />
 </head>
 <body>
   <header>
@@ -246,22 +217,63 @@
     </div>
 </nav>
 
-  <div class="hero"></div>
-
-<div class="floating-letters">
-  <span class="letter" style="top: 10%; left: 2%;">Α</span>
-  <span class="letter" style="top: 30%; left: 5%;">Β</span>
-  <span class="letter" style="top: 60%; left: 3%;">Γ</span>
-  <span class="letter" style="top: 20%; right: 2%;">Δ</span>
-  <span class="letter" style="top: 50%; right: 3%;">Ε</span>
-  <span class="letter" style="bottom: 15%; left: 1%;">Ζ</span>
-  <span class="letter" style="bottom: 30%; right: 2%;">Η</span>
-  <span class="letter" style="top: 40%; left: 6%;">Θ</span>
-  <span class="letter" style="bottom: 10%; right: 4%;">Σ</span>
-  <span class="letter" style="top: 5%; right: 6%;">Ω</span>
-  <span class="letter" style="bottom: 5%; left: 5%;">Ψ</span>
+  <div class="hero">
+<span class="hero-letter" style="top: 77%; left: 69%; animation-delay: 1.43s;">Χ</span>
+<span class="hero-letter" style="top: 9%; left: 47%; animation-delay: 2.79s;">Κ</span>
+<span class="hero-letter" style="top: 19%; left: 63%; animation-delay: 4.21s;">Υ</span>
+<span class="hero-letter" style="top: 81%; left: 49%; animation-delay: 1.94s;">π</span>
+<span class="hero-letter" style="top: 83%; left: 82%; animation-delay: 4.26s;">φ</span>
+<span class="hero-letter" style="top: 61%; left: 62%; animation-delay: 5.27s;">π</span>
+<span class="hero-letter" style="top: 74%; left: 30%; animation-delay: 1.89s;">Α</span>
+<span class="hero-letter" style="top: 12%; left: 15%; animation-delay: 4.02s;">Ι</span>
+<span class="hero-letter" style="top: 66%; left: 14%; animation-delay: 5.97s;">λ</span>
+<span class="hero-letter" style="top: 89%; left: 59%; animation-delay: 5.67s;">φ</span>
+<span class="hero-letter" style="top: 89%; left: 7%; animation-delay: 3.99s;">Κ</span>
+<span class="hero-letter" style="top: 30%; left: 73%; animation-delay: 0.33s;">Β</span>
+<span class="hero-letter" style="top: 37%; left: 6%; animation-delay: 1.8s;">Η</span>
+<span class="hero-letter" style="top: 44%; left: 33%; animation-delay: 5.53s;">ρ</span>
+<span class="hero-letter" style="top: 36%; left: 85%; animation-delay: 0.46s;">Σ</span>
+<span class="hero-letter" style="top: 61%; left: 40%; animation-delay: 3.07s;">Ζ</span>
+<span class="hero-letter" style="top: 16%; left: 37%; animation-delay: 2.6s;">ξ</span>
+<span class="hero-letter" style="top: 36%; left: 60%; animation-delay: 1.07s;">Ε</span>
+<span class="hero-letter" style="top: 47%; left: 61%; animation-delay: 5.78s;">Η</span>
+<span class="hero-letter" style="top: 31%; left: 26%; animation-delay: 4.16s;">Β</span>
+<span class="hero-letter" style="top: 56%; left: 88%; animation-delay: 5.84s;">ς</span>
+<span class="hero-letter" style="top: 88%; left: 69%; animation-delay: 0.57s;">Ο</span>
+<span class="hero-letter" style="top: 45%; left: 71%; animation-delay: 2.45s;">Ο</span>
+<span class="hero-letter" style="top: 62%; left: 30%; animation-delay: 5.01s;">Ν</span>
+<span class="hero-letter" style="top: 13%; left: 5%; animation-delay: 4.62s;">Τ</span>
+<span class="hero-letter" style="top: 40%; left: 50%; animation-delay: 0.12s;">Γ</span>
+<span class="hero-letter" style="top: 17%; left: 85%; animation-delay: 1.49s;">π</span>
+<span class="hero-letter" style="top: 7%; left: 71%; animation-delay: 3.58s;">Π</span>
+<span class="hero-letter" style="top: 54%; left: 15%; animation-delay: 5.09s;">Χ</span>
+<span class="hero-letter" style="top: 23%; left: 53%; animation-delay: 3.2s;">φ</span>
+<span class="hero-letter" style="top: 44%; left: 16%; animation-delay: 5.36s;">Μ</span>
+<span class="hero-letter" style="top: 20%; left: 27%; animation-delay: 0.94s;">ψ</span>
+<span class="hero-letter" style="top: 65%; left: 73%; animation-delay: 5.23s;">λ</span>
+<span class="hero-letter" style="top: 54%; left: 49%; animation-delay: 4.01s;">Π</span>
+<span class="hero-letter" style="top: 10%; left: 58%; animation-delay: 3.33s;">Ο</span>
+<span class="hero-letter" style="top: 83%; left: 36%; animation-delay: 0.41s;">Ν</span>
+<span class="hero-letter" style="top: 27%; left: 15%; animation-delay: 3.84s;">Ξ</span>
+<span class="hero-letter" style="top: 80%; left: 22%; animation-delay: 4.37s;">Ε</span>
+<span class="hero-letter" style="top: 90%; left: 26%; animation-delay: 5.92s;">Λ</span>
+<span class="hero-letter" style="top: 69%; left: 83%; animation-delay: 5.26s;">Ο</span>
+<span class="hero-letter" style="top: 5%; left: 26%; animation-delay: 5.43s;">Φ</span>
+<span class="hero-letter" style="top: 70%; left: 46%; animation-delay: 4.13s;">Ρ</span>
+<span class="hero-letter" style="top: 6%; left: 36%; animation-delay: 2.04s;">Ψ</span>
+<span class="hero-letter" style="top: 5%; left: 89%; animation-delay: 0.94s;">Ω</span>
+<span class="hero-letter" style="top: 51%; left: 79%; animation-delay: 1.76s;">Λ</span>
+<span class="hero-letter" style="top: 34%; left: 37%; animation-delay: 1.03s;">Ω</span>
+<span class="hero-letter" style="top: 77%; left: 6%; animation-delay: 2.4s;">Λ</span>
+<span class="hero-letter" style="top: 50%; left: 5%; animation-delay: 4.94s;">Λ</span>
+<span class="hero-letter" style="top: 46%; left: 89%; animation-delay: 3.96s;">Π</span>
+<span class="hero-letter" style="top: 74%; left: 58%; animation-delay: 0.04s;">Ξ</span>
+<span class="hero-letter" style="top: 52%; left: 25%; animation-delay: 4.5s;">π</span>
+<span class="hero-letter" style="top: 26%; left: 5%; animation-delay: 4.65s;">λ</span>
+<span class="hero-letter" style="top: 26%; left: 43%; animation-delay: 3.54s;">Ο</span>
+<span class="hero-letter" style="top: 26%; left: 90%; animation-delay: 1.54s;">Λ</span>
+<span class="hero-letter" style="top: 20%; left: 74%; animation-delay: 1.89s;">Σ</span>
 </div>
-
 
   <section id="about">
     <h2 class="section-title">За мен / Σχετικά με εμένα</h2>
