--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 
 <!DOCTYPE html>
+
 <html lang="bg">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Plamen Mollov – Преводи от и на гръцки език</title>
-  <style>
+<meta charset="utf-8"/>
+<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<title>Plamen Mollov – Преводи от и на гръцки език</title>
+<style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       margin: 0;
@@ -48,8 +49,8 @@
   position: relative;
   background-image: url('assets/images/bg-greece.jpg');
   background-size: contain;
-  background-position: center;
   background-repeat: no-repeat;
+  background-position: center;
   background-color: white;
   width: 100%;
   aspect-ratio: 16 / 4;
@@ -192,43 +193,37 @@
     });
   });
 </script>
-
 </head>
 <body>
-  <header>
-    <img src="assets/images/logo.png" alt="Plamen Mollov Logo" />
-    <h1>Пламен Асенов Моллов</h1>
-    <h2><strong>Заклет преводач от и на гръцки език с над 17 години опит и истинска любов към езика</strong></h2>
-  </header>
-
-  <nav>
-  <div class="menu-toggle">
-    <span></span>
-    <span></span>
-    <span></span>
-  </div>
-  <div class="nav-links">
-    <a href="#about">За мен / Σχετικά με εμένα</a>
-    <a href="#services">Услуги / Υπηρεσίες</a>
-    <a href="#prices">Цени / Τιμές</a>
-    <a href="#real-estate">Недвижими имоти в Гърция / Ακίνητα στην Ελλάδα</a>
-    <a href="#testimonials">Мнения / Αξιλογήσεις</a>
-    <a href="#contact">Контакти / Επικοινωνίες</a>
-    </div>
+<header>
+<img alt="Plamen Mollov Logo" src="assets/images/logo.png"/>
+<h1>Пламен Асенов Моллов</h1>
+<h2><strong>Заклет преводач от и на гръцки език с над 17 години опит и истинска любов към езика</strong></h2>
+</header>
+<nav>
+<div class="menu-toggle">
+<span></span>
+<span></span>
+<span></span>
+</div>
+<div class="nav-links">
+<a href="#about">За мен / Σχετικά με εμένα</a>
+<a href="#services">Услуги / Υπηρεσίες</a>
+<a href="#prices">Цени / Τιμές</a>
+<a href="#real-estate">Недвижими имоти в Гърция / Ακίνητα στην Ελλάδα</a>
+<a href="#testimonials">Мнения / Αξιλογήσεις</a>
+<a href="#contact">Контакти / Επικοινωνίες</a>
+</div>
 </nav>
-
-  <div class="hero">
+<div class="hero">
 <span class="hero-letter" style="top: 77%; left: 69%; animation-delay: 1.43s;">Χ</span>
 <span class="hero-letter" style="top: 9%; left: 47%; animation-delay: 2.79s;">Κ</span>
 <span class="hero-letter" style="top: 19%; left: 63%; animation-delay: 4.21s;">Υ</span>
 <span class="hero-letter" style="top: 81%; left: 49%; animation-delay: 1.94s;">π</span>
 <span class="hero-letter" style="top: 83%; left: 82%; animation-delay: 4.26s;">φ</span>
-<span class="hero-letter" style="top: 61%; left: 62%; animation-delay: 5.27s;">π</span>
 <span class="hero-letter" style="top: 74%; left: 30%; animation-delay: 1.89s;">Α</span>
 <span class="hero-letter" style="top: 12%; left: 15%; animation-delay: 4.02s;">Ι</span>
 <span class="hero-letter" style="top: 66%; left: 14%; animation-delay: 5.97s;">λ</span>
-<span class="hero-letter" style="top: 89%; left: 59%; animation-delay: 5.67s;">φ</span>
-<span class="hero-letter" style="top: 89%; left: 7%; animation-delay: 3.99s;">Κ</span>
 <span class="hero-letter" style="top: 30%; left: 73%; animation-delay: 0.33s;">Β</span>
 <span class="hero-letter" style="top: 37%; left: 6%; animation-delay: 1.8s;">Η</span>
 <span class="hero-letter" style="top: 44%; left: 33%; animation-delay: 5.53s;">ρ</span>
@@ -236,163 +231,117 @@
 <span class="hero-letter" style="top: 61%; left: 40%; animation-delay: 3.07s;">Ζ</span>
 <span class="hero-letter" style="top: 16%; left: 37%; animation-delay: 2.6s;">ξ</span>
 <span class="hero-letter" style="top: 36%; left: 60%; animation-delay: 1.07s;">Ε</span>
-<span class="hero-letter" style="top: 47%; left: 61%; animation-delay: 5.78s;">Η</span>
-<span class="hero-letter" style="top: 31%; left: 26%; animation-delay: 4.16s;">Β</span>
 <span class="hero-letter" style="top: 56%; left: 88%; animation-delay: 5.84s;">ς</span>
 <span class="hero-letter" style="top: 88%; left: 69%; animation-delay: 0.57s;">Ο</span>
-<span class="hero-letter" style="top: 45%; left: 71%; animation-delay: 2.45s;">Ο</span>
 <span class="hero-letter" style="top: 62%; left: 30%; animation-delay: 5.01s;">Ν</span>
 <span class="hero-letter" style="top: 13%; left: 5%; animation-delay: 4.62s;">Τ</span>
 <span class="hero-letter" style="top: 40%; left: 50%; animation-delay: 0.12s;">Γ</span>
-<span class="hero-letter" style="top: 17%; left: 85%; animation-delay: 1.49s;">π</span>
 <span class="hero-letter" style="top: 7%; left: 71%; animation-delay: 3.58s;">Π</span>
-<span class="hero-letter" style="top: 54%; left: 15%; animation-delay: 5.09s;">Χ</span>
-<span class="hero-letter" style="top: 23%; left: 53%; animation-delay: 3.2s;">φ</span>
 <span class="hero-letter" style="top: 44%; left: 16%; animation-delay: 5.36s;">Μ</span>
 <span class="hero-letter" style="top: 20%; left: 27%; animation-delay: 0.94s;">ψ</span>
-<span class="hero-letter" style="top: 65%; left: 73%; animation-delay: 5.23s;">λ</span>
-<span class="hero-letter" style="top: 54%; left: 49%; animation-delay: 4.01s;">Π</span>
-<span class="hero-letter" style="top: 10%; left: 58%; animation-delay: 3.33s;">Ο</span>
-<span class="hero-letter" style="top: 83%; left: 36%; animation-delay: 0.41s;">Ν</span>
 <span class="hero-letter" style="top: 27%; left: 15%; animation-delay: 3.84s;">Ξ</span>
-<span class="hero-letter" style="top: 80%; left: 22%; animation-delay: 4.37s;">Ε</span>
 <span class="hero-letter" style="top: 90%; left: 26%; animation-delay: 5.92s;">Λ</span>
-<span class="hero-letter" style="top: 69%; left: 83%; animation-delay: 5.26s;">Ο</span>
 <span class="hero-letter" style="top: 5%; left: 26%; animation-delay: 5.43s;">Φ</span>
 <span class="hero-letter" style="top: 70%; left: 46%; animation-delay: 4.13s;">Ρ</span>
 <span class="hero-letter" style="top: 6%; left: 36%; animation-delay: 2.04s;">Ψ</span>
-<span class="hero-letter" style="top: 5%; left: 89%; animation-delay: 0.94s;">Ω</span>
-<span class="hero-letter" style="top: 51%; left: 79%; animation-delay: 1.76s;">Λ</span>
-<span class="hero-letter" style="top: 34%; left: 37%; animation-delay: 1.03s;">Ω</span>
-<span class="hero-letter" style="top: 77%; left: 6%; animation-delay: 2.4s;">Λ</span>
-<span class="hero-letter" style="top: 50%; left: 5%; animation-delay: 4.94s;">Λ</span>
-<span class="hero-letter" style="top: 46%; left: 89%; animation-delay: 3.96s;">Π</span>
-<span class="hero-letter" style="top: 74%; left: 58%; animation-delay: 0.04s;">Ξ</span>
-<span class="hero-letter" style="top: 52%; left: 25%; animation-delay: 4.5s;">π</span>
-<span class="hero-letter" style="top: 26%; left: 5%; animation-delay: 4.65s;">λ</span>
-<span class="hero-letter" style="top: 26%; left: 43%; animation-delay: 3.54s;">Ο</span>
-<span class="hero-letter" style="top: 26%; left: 90%; animation-delay: 1.54s;">Λ</span>
-<span class="hero-letter" style="top: 20%; left: 74%; animation-delay: 1.89s;">Σ</span>
-</div>
-
-  <section id="about">
-    <h2 class="section-title">За мен / Σχετικά με εμένα</h2>
-    <p style="text-align: justify;">
+<span class="hero-letter" style="top: 5%; left: 89%; animation-delay: 0.94s;">Ω</span></div>
+<section id="about">
+<h2 class="section-title">За мен / Σχετικά με εμένα</h2>
+<p style="text-align: justify;">
       Казвам се Пламен Асенов Моллов и съм заклет преводач от и на гръцки език с над 17 години опит. Завършил съм специалност "Български език и новогръцки език" в ПУ „Паисий Хилендарски“ – гр. Пловдив. Участвах в престижни програми като <strong>Сократ – Еразъм</strong> в Солунския университет „Аристотел“, където усъвършенствах знанията си по гръцки език и култура. Моята мисия е да създавам мостове между хората чрез езика, с уважение, точност и вдъхновение.
     </p>
-    <p style="text-align: justify;">
+<p style="text-align: justify;">
       Το όνομά μου είναι Πλάμεν Ασένοβ Μόλλοβ και είμαι επίσημος μεταφραστής-διερμηνέας από και προς την ελληνική γλώσσα με εμπειρία άνω των 17 ετών. Σπούδασα Βουλγαρική και Νεοελληνική φιλολογία στο Πανεπιστήμιο της Φιλιππούπολης "Παίσιι Χιλεντάρσκι" και συμμετείχα στο πρόγραμμα <strong>Socrates – Erasmus</strong> στο Αριστοτέλειο Πανεπιστήμιο Θεσσαλονίκης, ενισχύοντας τις γλωσσικές και πολιτισμικές μου γνώσεις.Η αποστολή μου είναι να φέρνω κοντά τους ανθρώπους μέσα από τη γλώσσα, με ακρίβεια, σεβασμό και έμπνευση. 
     </p>
-  </section>
+</section>
+<section id="services" style="background-color: #e6f2ff;">
+<h2 class="section-title">Услуги / Υπηρεσίες</h2>
 
-  <section id="services" style="background-color: #e6f2ff;">
-    <h2 class="section-title">Услуги / Υπηρεσίες</h2>
-    </ul>
-      <p><em><li>✍️ Писмени преводи на документи, литературни и специализирани текстове.</li> 
-      <li>🎙️ Устни преводи при събития, срещи, обучения.</li>
-      <li>📜 Легализирани преводи за държавни и частни институции.</li>
-    </p>
-    </ul>
-      <li>✍️ Μετάφραση εγγράφων, λογοτεχνικών και εξειδικευμένων κειμένων.</li>
-      <li>🎙️ Παροχή προφορικής διερμηνείας σε επαγγελματικές εκδηλώσεις, επιχειρηματικές συναντήσεις και εκπαιδευτικά σεμινάρια.</li>
-      <li>📜 Επίσημες και επικυρωμένες μεταφράσεις εγγράφων για χρήση σε δημόσιες υπηρεσίες και ιδιωτικούς οργανισμούς.</li>
-    </ul>
+<p><em><li>✍️ Писмени преводи на документи, литературни и специализирани текстове.</li>
+<li>🎙️ Устни преводи при събития, срещи, обучения.</li>
+<li>📜 Легализирани преводи за държавни и частни институции.</li>
+</em></p>
 
-    <p><em>Μεταφράσεις που εμπνέουν εμπιστοσύνη, ακρίβεια και σεβασμό στον λόγο.</em></p>
-  </section>
+<li>✍️ Μετάφραση εγγράφων, λογοτεχνικών και εξειδικευμένων κειμένων.</li>
+<li>🎙️ Παροχή προφορικής διερμηνείας σε επαγγελματικές εκδηλώσεις, επιχειρηματικές συναντήσεις και εκπαιδευτικά σεμινάρια.</li>
+<li>📜 Επίσημες και επικυρωμένες μεταφράσεις εγγράφων για χρήση σε δημόσιες υπηρεσίες και ιδιωτικούς οργανισμούς.</li>
 
+<p><em>Μεταφράσεις που εμπνέουν εμπιστοσύνη, ακρίβεια και σεβασμό στον λόγο.</em></p>
+</section>
 <section id="real-estate" style="background-color: #f8fcff; padding: 2rem; border-top: 2px solid #ccc; border-radius: 12px;">
-  <h2 class="section-title">Недвижими имоти в Гърция / Ακίνητα στην Ελλάδα</h2>
-
-  <p><strong>Консултантски услуги и устен превод при имотни сделки в Гърция / Συμβουλευτικές υπηρεσίες και υπηρεσίες διερμηνείας για συναλλαγές ακινήτων στην Ελλάδα</strong></p>
-
-  <p>При покупка или продажба на недвижими имоти в Гърция е важно да имате доверен партньор, който да ви съдейства с езика, процедурите и културните особености. Предлагам пълно съдействие и устен превод на място, така че да се чувствате спокойни и уверени на всяка стъпка от процеса.</p>
-
-  <ul>
-    <li>🏘️ Устен превод при покупко-продажба на недвижими имоти</li>
-    <li>📝 Консултации и превод при сключване на договори и нотариални актове</li>
-    <li>💼 Издаване на данъчен номер (ΑΦΜ) в Гърция</li>
-    <li>🤝 Придружаване до нотариус, адвокат, счетоводител, агенции за недвижими имоти</li>
-    <li>📄 Превод и обяснение на документи, изисквани от гръцки институции</li>
-  </ul>
-
-  <p>Κατά την αγορά ή πώληση ακινήτου στην Ελλάδα, είναι σημαντικό να έχετε στο πλευρό σας έναν αξιόπιστο συνεργάτη που γνωρίζει τόσο τη γλώσσα όσο και τη διαδικασία. Προσφέρω πλήρη υποστήριξη και προφορική διερμηνεία ώστε να αισθάνεστε ασφάλεια και κατανόηση σε κάθε βήμα.</p>
-
-  <ul>
-    <li>🏘️ Διερμηνεία σε διαδικασίες αγοραπωλησίας ακινήτων</li>
-    <li>📝 Συμβουλές και μετάφραση συμβολαίων και νομικών εγγράφων</li>
-    <li>💼 Έκδοση ΑΦΜ (φορολογικού αριθμού) στην εφορία</li>
-    <li>🤝 Συνοδεία σε συμβολαιογράφους, δικηγόρους, λογιστές ή κτηματομεσίτες</li>
-    <li>📄 Ερμηνεία και επεξήγηση απαιτούμενων εγγράφων</li>
-  </ul>
-
-  <p><strong>📩 Свържете се с мен, за да уговорим индивидуална среща или консултация.<br>
+<h2 class="section-title">Недвижими имоти в Гърция / Ακίνητα στην Ελλάδα</h2>
+<p><strong>Консултантски услуги и устен превод при имотни сделки в Гърция / Συμβουλευτικές υπηρεσίες και υπηρεσίες διερμηνείας για συναλλαγές ακινήτων στην Ελλάδα</strong></p>
+<p>При покупка или продажба на недвижими имоти в Гърция е важно да имате доверен партньор, който да ви съдейства с езика, процедурите и културните особености. Предлагам пълно съдействие и устен превод на място, така че да се чувствате спокойни и уверени на всяка стъпка от процеса.</p>
+<ul>
+<li>🏘️ Устен превод при покупко-продажба на недвижими имоти</li>
+<li>📝 Консултации и превод при сключване на договори и нотариални актове</li>
+<li>💼 Издаване на данъчен номер (ΑΦΜ) в Гърция</li>
+<li>🤝 Придружаване до нотариус, адвокат, счетоводител, агенции за недвижими имоти</li>
+<li>📄 Превод и обяснение на документи, изисквани от гръцки институции</li>
+</ul>
+<p>Κατά την αγορά ή πώληση ακινήτου στην Ελλάδα, είναι σημαντικό να έχετε στο πλευρό σας έναν αξιόπιστο συνεργάτη που γνωρίζει τόσο τη γλώσσα όσο και τη διαδικασία. Προσφέρω πλήρη υποστήριξη και προφορική διερμηνεία ώστε να αισθάνεστε ασφάλεια και κατανόηση σε κάθε βήμα.</p>
+<ul>
+<li>🏘️ Διερμηνεία σε διαδικασίες αγοραπωλησίας ακινήτων</li>
+<li>📝 Συμβουλές και μετάφραση συμβολαίων και νομικών εγγράφων</li>
+<li>💼 Έκδοση ΑΦΜ (φορολογικού αριθμού) στην εφορία</li>
+<li>🤝 Συνοδεία σε συμβολαιογράφους, δικηγόρους, λογιστές ή κτηματομεσίτες</li>
+<li>📄 Ερμηνεία και επεξήγηση απαιτούμενων εγγράφων</li>
+</ul>
+<p><strong>📩 Свържете се с мен, за да уговорим индивидуална среща или консултация.<br/>
   📩 Επικοινωνήστε μαζί μου για προσωπικό ραντεβού ή συμβουλή.</strong></p>
 </section>
-
-
-  <section id="prices">
-    <h2 class="section-title">Цени / Τιμές</h2>
-    <p style="text-align: justify;">
-    <p><em>Цените се договарят индивидуално според сложността, обема и сроковете.</em></p>
-    <p><em>Οι τιμές καθορίζονται μεμονωμένα, ανάλογα με τη δυσκολία του κειμένου, τον όγκο και τα χρονικά περιθώρια παράδοσης.</em></p>
-  
+<section id="prices">
+<h2 class="section-title">Цени / Τιμές</h2>
+<p style="text-align: justify;">
+<p><em>Цените се договарят индивидуално според сложността, обема и сроковете.</em></p>
+<p><em>Οι τιμές καθορίζονται μεμονωμένα, ανάλογα με τη δυσκολία του κειμένου, τον όγκο και τα χρονικά περιθώρια παράδοσης.</em></p>
 <div style="margin-top: 2rem; border-top: 2px solid #ccc; padding-top: 2rem;">
-  <h3>Попълни формата и поискай своята оферта още днес!<br/>Συμπλήρωσε τη φόρμα και ζήτησε την προσφορά σου σήμερα!</h3>
-  <form action="https://formsubmit.co/mollovplamen@gmail.com" method="POST" enctype="multipart/form-data">
-    <input type="text" name="Име и фамилия" placeholder="Име и фамилия / Ονοματεπώνυμο" required>
-    <input type="email" name="Имейл" placeholder="Имейл адрес / Email" required>
-    <input type="tel" name="Телефон" placeholder="Телефон / Τηλέφωνο" required>
-    <textarea name="Описание" placeholder="Кратко описание... / Περιγραφή" rows="4" required></textarea>
-    <input type="file" name="attachment" required>
-    <button type="submit">Изпрати / Αποστολή</button>
-    <input type="hidden" name="_captcha" value="false">
-  </form>
+<h3>Попълни формата и поискай своята оферта още днес!<br>Συμπλήρωσε τη φόρμα και ζήτησε την προσφορά σου σήμερα!</br></h3>
+<form action="https://formsubmit.co/mollovplamen@gmail.com" enctype="multipart/form-data" method="POST">
+<input name="Име и фамилия" placeholder="Име и фамилия / Ονοματεπώνυμο" required="" type="text"/>
+<input name="Имейл" placeholder="Имейл адрес / Email" required="" type="email"/>
+<input name="Телефон" placeholder="Телефон / Τηλέφωνο" required="" type="tel"/>
+<textarea name="Описание" placeholder="Кратко описание... / Περιγραφή" required="" rows="4"></textarea>
+<input name="attachment" required="" type="file"/>
+<button type="submit">Изпрати / Αποστολή</button>
+<input name="_captcha" type="hidden" value="false"/>
+</form>
 </div>
-</section>
-
-  <section id="testimonials">
-    <h2 class="section-title">Мнения на клиенти /  Αξιολογήσεις πελατών</h2>
-    <div class="testimonial">
+</p></section>
+<section id="testimonials">
+<h2 class="section-title">Мнения на клиенти /  Αξιολογήσεις πελατών</h2>
+<div class="testimonial">
       “Изключително професионален подход и невероятно качество на преводите. Препоръчвам с две ръце!”
       <strong>Мария Димитрова</strong>
-    </div>
-    <div class="testimonial">
+</div>
+<div class="testimonial">
       “Благодарение на Пламен, успях да сключа важен договор в Гърция. Истински мост между културите.”
       <strong>Дияна Иванова</strong>
-    </div>
-    <div class="testimonial">
+</div>
+<div class="testimonial">
       “Είμαι πολύ ικανοποιημένος από τις υπηρεσίες του κ. Πλάμεν Μόλλοβ.”
       <strong>Παρασκευαΐδης Χρήστος</strong>
-    </div>
-  
-
+</div>
 <div style="margin-top: 2rem;">
-  
 <h3>🗣️ Споделете вашето мнение / Αφήστε την αξιολόγηση σας</h3>
 <form action="https://formsubmit.co/mollovplamen@gmail.com" method="POST">
-  <input type="text" name="Име/Όνομα" placeholder="Вашето име / Το όνομα σας" required>
-  <textarea name="Мнение/Αξιολόγηση" placeholder="Вашето мнение / Η αξιολόγηση σας" rows="4" required></textarea>
-  <button type="submit">Изпрати / Αποστολή</button>
-  <input type="hidden" name="_subject" value="Ново клиентско мнение / Νέα αξιολόγηση πελάτη">
-  <input type="hidden" name="_captcha" value="false">
+<input name="Име/Όνομα" placeholder="Вашето име / Το όνομα σας" required="" type="text"/>
+<textarea name="Мнение/Αξιολόγηση" placeholder="Вашето мнение / Η αξιολόγηση σας" required="" rows="4"></textarea>
+<button type="submit">Изпрати / Αποστολή</button>
+<input name="_subject" type="hidden" value="Ново клиентско мнение / Νέα αξιολόγηση πελάτη"/>
+<input name="_captcha" type="hidden" value="false"/>
 </form>
-
 </div>
 </section>
-
-  
 <section id="contact">
-    <h2 class="section-title">Контакти / Επικοινωνίες</h2>
-    <p>📧 Email: <a href="mailto:mollovplamen@gmail.com">mollovplamen@gmail.com</a></p>
+<h2 class="section-title">Контакти / Επικοινωνίες</h2>
+<p>📧 Email: <a href="mailto:mollovplamen@gmail.com">mollovplamen@gmail.com</a></p>
 <p>📍 Град: Пловдив / πόλη Πλόβντιβ Βουλγαρίας</p>
 <p>📞 Телефон / Τηλέφωνο: 00359 897 09 89 59</p>
-    
-  </section>
-
-  <footer>
-    <p>&copy; 2025 Пламен Моллов – Заклет преводач с гръцки език</p>
-    <p>🇧🇬 България | Ελλάδα 🇬🇷</p>
-  </footer>
+</section>
+<footer>
+<p>© 2025 Пламен Моллов – Заклет преводач с гръцки език</p>
+<p>🇧🇬 България | Ελλάδα 🇬🇷</p>
+</footer>
 </body>
 </html>
