--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     .hero {
   position: relative;
-  background-image: url('assets/images/bg-greece.jpg');
+  background-image: url('assets/images/bg-greece-16x6.jpg');
   background-size: contain;
   background-repeat: no-repeat;
   background-position: center;
