--- a/index.html
+++ b/index.html
@@ -193,7 +193,29 @@
     });
   });
 </script>
-</head>
+<meta content="Заклет преводач с гръцки език, устни и писмени преводи, имоти в Гърция, легализация, консултации при покупка на имот." name="description"/><meta content="заклет преводач гръцки език, устни преводи гръцки, писмени преводи, имоти в Гърция, покупко-продажба на имоти, легализация, Ακίνητα στην Ελλάδα, μεταφράσεις ελληνικά, заверки на документи, апостил, апостил на документи, устни и писмени преводи с гръцки език, легализация на документи" name="keywords"/><meta content="Пламен Моллов" name="author"/><link href="https://www.prevodigr.eu" rel="canonical"/><script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "ProfessionalService",
+  "name": "Пламен Моллов – Заклет преводач от и на гръцки език",
+  "url": "https://www.prevodigr.eu",
+  "logo": "https://www.prevodigr.eu/assets/images/logo.png",
+  "image": "https://www.prevodigr.eu/assets/images/bg-greece.jpg",
+  "description": "Заклет преводач с гръцки език с над 17 години опит. Устни и писмени преводи, преводи на документи, легализация, имотни сделки в Гърция.",
+  "address": {
+    "@type": "PostalAddress",
+    "addressLocality": "Пловдив",
+    "addressCountry": "България"
+  },
+  "contactPoint": {
+    "@type": "ContactPoint",
+    "telephone": "+359897098959",
+    "contactType": "Customer Service",
+    "areaServed": "BG, GR",
+    "availableLanguage": ["Bulgarian", "Greek"]
+  }
+}
+</script></head>
 <body>
 <header>
 <img alt="Plamen Mollov Logo" src="assets/images/logo.png"/>
@@ -256,16 +278,13 @@
 </section>
 <section id="services" style="background-color: #e6f2ff;">
 <h2 class="section-title">Услуги / Υπηρεσίες</h2>
-
 <p><em><li>✍️ Писмени преводи на документи, литературни и специализирани текстове.</li>
 <li>🎙️ Устни преводи при събития, срещи, обучения.</li>
 <li>📜 Легализирани преводи за държавни и частни институции.</li>
 </em></p>
-
 <li>✍️ Μετάφραση εγγράφων, λογοτεχνικών και εξειδικευμένων κειμένων.</li>
 <li>🎙️ Παροχή προφορικής διερμηνείας σε επαγγελματικές εκδηλώσεις, επιχειρηματικές συναντήσεις και εκπαιδευτικά σεμινάρια.</li>
 <li>📜 Επίσημες και επικυρωμένες μεταφράσεις εγγράφων για χρήση σε δημόσιες υπηρεσίες και ιδιωτικούς οργανισμούς.</li>
-
 <p><em>Μεταφράσεις που εμπνέουν εμπιστοσύνη, ακρίβεια και σεβασμό στον λόγο.</em></p>
 </section>
 <section id="real-estate" style="background-color: #f8fcff; padding: 2rem; border-top: 2px solid #ccc; border-radius: 12px;">
@@ -296,7 +315,7 @@
 <p><em>Цените се договарят индивидуално според сложността, обема и сроковете.</em></p>
 <p><em>Οι τιμές καθορίζονται μεμονωμένα, ανάλογα με τη δυσκολία του κειμένου, τον όγκο και τα χρονικά περιθώρια παράδοσης.</em></p>
 <div style="margin-top: 2rem; border-top: 2px solid #ccc; padding-top: 2rem;">
-<h3>Попълни формата и поискай своята оферта още днес!<br>Συμπλήρωσε τη φόρμα και ζήτησε την προσφορά σου σήμερα!</br></h3>
+<h3>Попълни формата и поискай своята оферта още днес!<br/>Συμπλήρωσε τη φόρμα και ζήτησε την προσφορά σου σήμερα!</h3>
 <form action="https://formsubmit.co/mollovplamen@gmail.com" enctype="multipart/form-data" method="POST">
 <input name="Име и фамилия" placeholder="Име и фамилия / Ονοματεπώνυμο" required="" type="text"/>
 <input name="Имейл" placeholder="Имейл адрес / Email" required="" type="email"/>
