--- a/index.html
+++ b/index.html
@@ -244,28 +244,30 @@
 <span class="hero-letter" style="top: 81%; left: 49%; animation-delay: 1.94s;">π</span>
 <span class="hero-letter" style="top: 83%; left: 82%; animation-delay: 4.26s;">φ</span>
 <span class="hero-letter" style="top: 74%; left: 30%; animation-delay: 1.89s;">Α</span>
-<span class="hero-letter" style="top: 12%; left: 15%; animation-delay: 4.02s;">Ι</span>
+<span class="hero-letter" style="top: 12%; left: 12%; animation-delay: 6.02s;">Ι</span>
 <span class="hero-letter" style="top: 66%; left: 14%; animation-delay: 5.97s;">λ</span>
 <span class="hero-letter" style="top: 30%; left: 73%; animation-delay: 0.33s;">Β</span>
 <span class="hero-letter" style="top: 37%; left: 6%; animation-delay: 1.8s;">Η</span>
-<span class="hero-letter" style="top: 44%; left: 33%; animation-delay: 5.53s;">ρ</span>
+<span class="hero-letter" style="top: 44%; left: 25%; animation-delay: 5.53s;">ρ</span>
 <span class="hero-letter" style="top: 36%; left: 85%; animation-delay: 0.46s;">Σ</span>
 <span class="hero-letter" style="top: 61%; left: 40%; animation-delay: 3.07s;">Ζ</span>
 <span class="hero-letter" style="top: 16%; left: 37%; animation-delay: 2.6s;">ξ</span>
 <span class="hero-letter" style="top: 36%; left: 60%; animation-delay: 1.07s;">Ε</span>
 <span class="hero-letter" style="top: 56%; left: 88%; animation-delay: 5.84s;">ς</span>
-<span class="hero-letter" style="top: 88%; left: 69%; animation-delay: 0.57s;">Ο</span>
-<span class="hero-letter" style="top: 62%; left: 30%; animation-delay: 5.01s;">Ν</span>
+<span class="hero-letter" style="top: 88%; left: 63%; animation-delay: 0.57s;">Ο</span>
+<span class="hero-letter" style="top: 83%; left: 4%; animation-delay: 5.01s;">Ν</span>
 <span class="hero-letter" style="top: 13%; left: 5%; animation-delay: 4.62s;">Τ</span>
 <span class="hero-letter" style="top: 40%; left: 50%; animation-delay: 0.12s;">Γ</span>
 <span class="hero-letter" style="top: 7%; left: 71%; animation-delay: 3.58s;">Π</span>
 <span class="hero-letter" style="top: 44%; left: 16%; animation-delay: 5.36s;">Μ</span>
 <span class="hero-letter" style="top: 20%; left: 27%; animation-delay: 0.94s;">ψ</span>
-<span class="hero-letter" style="top: 27%; left: 15%; animation-delay: 3.84s;">Ξ</span>
+<span class="hero-letter" style="top: 27%; left: 96%; animation-delay: 3.84s;">Ξ</span>
 <span class="hero-letter" style="top: 90%; left: 26%; animation-delay: 5.92s;">Λ</span>
-<span class="hero-letter" style="top: 5%; left: 26%; animation-delay: 5.43s;">Φ</span>
+<span class="hero-letter" style="top: 5%; left: 20%; animation-delay: 5.43s;">Φ</span>
 <span class="hero-letter" style="top: 70%; left: 46%; animation-delay: 4.13s;">Ρ</span>
-<span class="hero-letter" style="top: 6%; left: 36%; animation-delay: 2.04s;">Ψ</span>
+<span class="hero-letter" style="top: 6%; left: 77%; animation-delay: 2.04s;">Ψ</span>
+<span class="hero-letter" style="top: 76%; left: 98%; animation-delay: 2.04s;">Θ</span>
+<span class="hero-letter" style="top: 30%; left: 42%; animation-delay: 5.04s;">η</span>
 <span class="hero-letter" style="top: 5%; left: 89%; animation-delay: 0.94s;">Ω</span></div>
 <section id="about">
 <h2 class="section-title">За мен / Σχετικά με εμένα</h2>
@@ -280,11 +282,11 @@
 <h2 class="section-title">Услуги / Υπηρεσίες</h2>
 <p><em><li>✍️ Писмени преводи на документи, литературни и специализирани текстове.</li>
 <li>🎙️ Устни преводи при събития, срещи, обучения.</li>
-<li>📜 Легализирани преводи за държавни и частни институции.</li>
+<li>📜 Легализации и заверки на документи за държавни и частни институции. Апостил.</li>
 </em></p>
 <li>✍️ Μετάφραση εγγράφων, λογοτεχνικών και εξειδικευμένων κειμένων.</li>
 <li>🎙️ Παροχή προφορικής διερμηνείας σε επαγγελματικές εκδηλώσεις, επιχειρηματικές συναντήσεις και εκπαιδευτικά σεμινάρια.</li>
-<li>📜 Επίσημες και επικυρωμένες μεταφράσεις εγγράφων για χρήση σε δημόσιες υπηρεσίες και ιδιωτικούς οργανισμούς.</li>
+<li>📜 Επίσημες και επικυρωμένες μεταφράσεις εγγράφων για χρήση σε δημόσιες υπηρεσίες και ιδιωτικούς οργανισμούς. Σφραγίδα της Χάγης.</li>
 <p><em>Μεταφράσεις που εμπνέουν εμπιστοσύνη, ακρίβεια και σεβασμό στον λόγο.</em></p>
 </section>
 <section id="real-estate" style="background-color: #f8fcff; padding: 2rem; border-top: 2px solid #ccc; border-radius: 12px;">
@@ -296,7 +298,7 @@
 <li>📝 Консултации и превод при сключване на договори и нотариални актове</li>
 <li>💼 Издаване на данъчен номер (ΑΦΜ) в Гърция</li>
 <li>🤝 Придружаване до нотариус, адвокат, счетоводител, агенции за недвижими имоти</li>
-<li>📄 Превод и обяснение на документи, изисквани от гръцки институции</li>
+<li>📄 Превод и заверка на документи, изисквани от гръцки институции</li>
 </ul>
 <p>Κατά την αγορά ή πώληση ακινήτου στην Ελλάδα, είναι σημαντικό να έχετε στο πλευρό σας έναν αξιόπιστο συνεργάτη που γνωρίζει τόσο τη γλώσσα όσο και τη διαδικασία. Προσφέρω πλήρη υποστήριξη και προφορική διερμηνεία ώστε να αισθάνεστε ασφάλεια και κατανόηση σε κάθε βήμα.</p>
 <ul>
@@ -304,7 +306,7 @@
 <li>📝 Συμβουλές και μετάφραση συμβολαίων και νομικών εγγράφων</li>
 <li>💼 Έκδοση ΑΦΜ (φορολογικού αριθμού) στην εφορία</li>
 <li>🤝 Συνοδεία σε συμβολαιογράφους, δικηγόρους, λογιστές ή κτηματομεσίτες</li>
-<li>📄 Ερμηνεία και επεξήγηση απαιτούμενων εγγράφων</li>
+<li>📄 Ερμηνεία και επικύρωση απαιτούμενων εγγράφων</li>
 </ul>
 <p><strong>📩 Свържете се с мен, за да уговорим индивидуална среща или консултация.<br/>
   📩 Επικοινωνήστε μαζί μου για προσωπικό ραντεβού ή συμβουλή.</strong></p>
@@ -320,7 +322,7 @@
 <input name="Име и фамилия" placeholder="Име и фамилия / Ονοματεπώνυμο" required="" type="text"/>
 <input name="Имейл" placeholder="Имейл адрес / Email" required="" type="email"/>
 <input name="Телефон" placeholder="Телефон / Τηλέφωνο" required="" type="tel"/>
-<textarea name="Описание" placeholder="Кратко описание... / Περιγραφή" required="" rows="4"></textarea>
+<textarea name="Описание" placeholder="Кратко описание... / Περιγραφή..." required="" rows="4"></textarea>
 <input name="attachment" required="" type="file"/>
 <button type="submit">Изпрати / Αποστολή</button>
 <input name="_captcha" type="hidden" value="false"/>
