--- a/index.html
+++ b/index.html
@@ -265,6 +265,7 @@
 <span class="hero-letter" style="top: 90%; left: 26%; animation-delay: 5.92s;">Λ</span>
 <span class="hero-letter" style="top: 5%; left: 20%; animation-delay: 5.43s;">Φ</span>
 <span class="hero-letter" style="top: 70%; left: 46%; animation-delay: 4.13s;">Ρ</span>
+<span class="hero-letter" style="top: 72%; left: 55%; animation-delay: 2.13s;">β</span>
 <span class="hero-letter" style="top: 6%; left: 77%; animation-delay: 2.04s;">Ψ</span>
 <span class="hero-letter" style="top: 76%; left: 98%; animation-delay: 2.04s;">Θ</span>
 <span class="hero-letter" style="top: 30%; left: 42%; animation-delay: 5.04s;">η</span>
