--- a/index.html
+++ b/index.html
@@ -36,9 +36,11 @@
       color: white;
       text-decoration: none;
       font-weight: bold;
-      padding: 0.8rem 1.6rem;
-      margin: 0 0.6rem;
+      padding: 1rem 1.8rem;
+      margin: 0.6rem;
       transition: background-color 0.3s ease;
+      display: inline-block;
+      border-radius: 8px;
     }
     html {
       scroll-behavior: smooth;
@@ -281,13 +283,16 @@
 </section>
 <section id="services" style="background-color: #e6f2ff;">
 <h2 class="section-title">Услуги / Υπηρεσίες</h2>
-<p><em><li>✍️ Писмени преводи на документи, литературни и специализирани текстове.</li>
+<ul>
+<li>✍️ Писмени преводи на документи, литературни и специализирани текстове.</li>
 <li>🎙️ Устни преводи при събития, срещи, обучения.</li>
 <li>📜 Легализации и заверки на документи за държавни и частни институции. Апостил.</li>
-</em></p>
+</ul>
+<ul>
 <li>✍️ Μετάφραση εγγράφων, λογοτεχνικών και εξειδικευμένων κειμένων.</li>
 <li>🎙️ Παροχή προφορικής διερμηνείας σε επαγγελματικές εκδηλώσεις, επιχειρηματικές συναντήσεις και εκπαιδευτικά σεμινάρια.</li>
-<li>📜 Επίσημες και επικυρωμένες μεταφράσεις εγγράφων για χρήση σε δημόσιες υπηρεσίες και ιδιωτικούς οργανισμούς. Σφραγίδα της Χάγης.</li>
+<li>📜 Επίσημες и επικυρωμένες μεταφράσεις εγγράφων за χρήση σε δημόσιες υπηρεσίες и ιδιωτικούς οργανισμούς. Σφραγίδα της Χάγης.</li>
+</ul>
 <p><em>Μεταφράσεις που εμπνέουν εμπιστοσύνη, ακρίβεια και σεβασμό στον λόγο.</em></p>
 </section>
 <section id="real-estate" style="background-color: #f8fcff; padding: 2rem; border-top: 2px solid #ccc; border-radius: 12px;">
@@ -320,15 +325,12 @@
 <div style="margin-top: 2rem; border-top: 2px solid #ccc; padding-top: 2rem;">
 <h3>Попълни формата и поискай своята оферта още днес!<br/>Συμπλήρωσε τη φόρμα και ζήτησε την προσφορά σου σήμερα!</h3>
 <form action="https://formsubmit.co/mollovplamen@gmail.com" enctype="multipart/form-data" method="POST">
-<label for="ime">Име и фамилия / Ονοματεπώνυμο</label>
-<input id="ime" name="Име и фамилия" placeholder="Име и фамилия / Ονοματεπώνυμο" required="" type="text"/>
-<label for="email">Имейл адрес / Email</label>
-<input id="email" name="Имейл" placeholder="Имейл адрес / Email" required="" type="email"/>
-<label for="phone">Телефон / Τηλέφωνο</label>
-<input id="phone" name="Телефон" placeholder="Телефон / Τηλέφωνο" required="" type="tel"/>
-<label for="opisanie">Описание / Περιγραφή</label>
-<textarea id="opisanie" name="Описание" placeholder="Кратко описание... / Περιγραφή..." required="" rows="4"></textarea>
-<input name="attachment" required="" type="file"/>
+<input name="Име и фамилия" placeholder="Име и фамилия / Ονοματεπώνυμο" required="" type="text"/>
+<input name="Имейл" placeholder="Имейл адрес / Email" required="" type="email"/>
+<input name="Телефон" placeholder="Телефон / Τηλέφωνο" required="" type="tel"/>
+<textarea name="Описание" placeholder="Кратко описание... / Περιγραφή..." required="" rows="4"></textarea>
+<label for="attachment"><strong>📎 Прикачен файл / Επισύναψη αρχείου:</strong></label>
+<input id="attachment" name="attachment" required type="file">
 <button type="submit">Изпрати / Αποστολή</button>
 <input name="_captcha" type="hidden" value="false"/>
 </form>
