--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 <title>Plamen Mollov – Преводи от и на гръцки език</title>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600&display=swap" rel="stylesheet">
 <style>
     body {
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -35,12 +36,20 @@
     nav a {
       color: white;
       text-decoration: none;
-      font-weight: bold;
-      padding: 1rem 1.8rem;
-      margin: 0.6rem;
-      transition: background-color 0.3s ease;
-      display: inline-block;
-      border-radius: 8px;
+      font-weight: 600;
+      font-family: 'Poppins', sans-serif;
+      font-size: 1.1rem;
+      padding: 0.9rem 1.5rem;
+      margin: 0.4rem;
+      transition: all 0.3s ease;
+      display: inline-flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 10px;
+      background-color: rgba(255, 255, 255, 0.1);
+    }
+    nav a:hover {
+      background-color: rgba(255, 255, 255, 0.25);
     }
     html {
       scroll-behavior: smooth;
