--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
 <a href="#about">За мен / Σχετικά με εμένα</a>
 <a href="#services">Услуги / Υπηρεσίες</a>
 <a href="#prices">Цени / Τιμές</a>
-<a href="#real-estate">Недвижими имоти в Гърция / Ακίνητα στην Ελλάδα</a>
+<a href="#real-estate">Имоти в Гърция / Ακίνητα στην Ελλάδα</a>
 <a href="#testimonials">Мнения / Αξιλογήσεις</a>
 <a href="#contact">Контакти / Επικοινωνίες</a>
 </div>
