--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@
 <ul>
 <li>✍️ Μετάφραση εγγράφων, λογοτεχνικών και εξειδικευμένων κειμένων.</li>
 <li>🎙️ Παροχή προφορικής διερμηνείας σε επαγγελματικές εκδηλώσεις, επιχειρηματικές συναντήσεις και εκπαιδευτικά σεμινάρια.</li>
-<li>📜 Επίσημες и επικυρωμένες μεταφράσεις εγγράφων за χρήση σε δημόσιες υπηρεσίες и ιδιωτικούς οργανισμούς. Σφραγίδα της Χάγης.</li>
+<li>📜 Επίσημες και επικυρωμένες μεταφράσεις εγγράφων για χρήση σε δημόσιες υπηρεσίες και ιδιωτικούς οργανισμούς. Σφραγίδα της Χάγης.</li>
 </ul>
 <p><em>Μεταφράσεις που εμπνέουν εμπιστοσύνη, ακρίβεια και σεβασμό στον λόγο.</em></p>
 </section>
@@ -325,6 +325,8 @@
 </ul>
 <p><strong>📩 Свържете се с мен, за да уговорим индивидуална среща или консултация.<br/>
   📩 Επικοινωνήστε μαζί μου για προσωπικό ραντεβού ή συμβουλή.</strong></p>
+<p><strong> <a href="https://www.dimokritosrealestate.gr/"
+target="_blank">Актуални оферти за недвижими имоти в Гърция / Τρέχουσες προσφορές ακινήτων στην Ελλάδα</a>
 </section>
 <section id="prices">
 <h2 class="section-title">Цени / Τιμές</h2>
