--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 <p><strong>📩 Свържете се с мен, за да уговорим индивидуална среща или консултация.<br/>
   📩 Επικοινωνήστε μαζί μου για προσωπικό ραντεβού ή συμβουλή.</strong></p>
 <p><strong> <a href="https://www.dimokritosrealestate.gr/"
-target="_blank">Актуални оферти за недвижими имоти в Гърция / Τρέχουσες προσφορές ακινήτων στην Ελλάδα</a>
+            target="_blank" rel="noopener noreferrer">Актуални оферти за недвижими имоти в Гърция / Τρέχουσες προσφορές ακινήτων στην Ελλάδα</a>
 </section>
 <section id="prices">
 <h2 class="section-title">Цени / Τιμές</h2>
