--- a/index.html
+++ b/index.html
@@ -325,8 +325,7 @@
 </ul>
 <p><strong>📩 Свържете се с мен, за да уговорим индивидуална среща или консултация.<br/>
   📩 Επικοινωνήστε μαζί μου για προσωπικό ραντεβού ή συμβουλή.</strong></p>
-<p><strong> <a href="https://www.dimokritosrealestate.gr/"
-            target="_blank" rel="noopener noreferrer">Актуални оферти за недвижими имоти в Гърция / Τρέχουσες προσφορές ακινήτων στην Ελλάδα</a>
+<p><strong><a href="https://www.dimokritosrealestate.gr/" target="_blank" rel="noopener noreferrer">Актуални оферти за недвижими имоти в Гърция / Τρέχουσες προσφορές ακινήτων στην Ελλάδα</a></strong></p></strong></p>
 </section>
 <section id="prices">
 <h2 class="section-title">Цени / Τιμές</h2>
